--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 title = "austing.dev"
 theme = "ag"
 relativeURLs = true
+enableEmoji = true
 
 # Use syntax highlighting of the theme
 pygmentsUseClasses = false
