--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hugo-dev-theme",
+  "name": "devise",
   "version": "1.0.0",
-  "description": "hugo-dev-theme hugo theme",
+  "description": "devise hugo theme",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,7 +17,7 @@
     "theme"
   ],
   "author": "Austin Gebauer",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2"
   }
