--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -8,6 +8,7 @@ googleAnalytics = ""
 enableRobotsTXT = true
 copyright = "&copy; Copyright Year, Your Name"
 
+# Main menu items
 [menu]
   [[menu.main]]
     identifier = "about"
@@ -15,14 +16,12 @@ copyright = "&copy; Copyright Year, Your Name"
     title = "About"
     url = "/about/"
     weight = -110
-
   [[menu.main]]
     identifier = "posts"
     name = "Posts"
     title = "Posts"
     url = "/post/"
     weight = -100
-
   [[menu.main]]
     identifier = "categories"
     name = "Categories"
@@ -30,15 +29,16 @@ copyright = "&copy; Copyright Year, Your Name"
     url = "/categories/"
     weight = -90
 
+# Configuration Features
 [params]
-  header_title = "Your Name"
-  header_subtitle = "Your Creative Subtitle"
-  home_image = "/images/avatar.png"
-  recent_posts = 5
-  mainSections = ["posts", "post", "blog"]
+  header_title = "Your Name"                 # Your header title
+  header_subtitle = "Your Creative Subtitle" # Your header subtitle
+  home_image = "/images/avatar.png"          # Path to header image starting from the static directory
+  recent_posts = 5                           # Max amount of recent posts to show
+  mainSections = ["posts", "post", "blog"]   # Main sections to include in recent posts
   [[params.social]]
-    fa_icon = "fab fa-github fa-1x"
-    href = ""
+    fa_icon = "fab fa-github fa-1x"          # Font Awesome icon class
+    href = "http://github.com/youruser"      # Link to associate with icon
   [[params.social]]
   	fa_icon = "fab fa-linkedin-in fa-1x"
   	href = ""
