--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -47,4 +47,4 @@ copyright = "&copy; Copyright Year, Your Name"
     href = ""
   [[params.social]]
     fa_icon = "fas fa-at fa-1x"
-    href = ""
+    href = "mailto:gebauer.austin@gmail.com" # Link can also be a mailto
