--- a/theme.toml
+++ b/theme.toml
@@ -1,15 +1,12 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/gohugoio/hugoThemes#themetoml for an example
-
 name = "devise"
 license = "MIT"
 licenselink = "https://github.com/austingebauer/devise/blob/master/LICENSE"
-description = "A minimal hugo blog theme"
-homepage = "http://austingebauer.com/"
-tags = ["developer", "blog", "minimal", "personal"]
-features = []
-min_version = "0.59.1"
+description = "A fast, minimal, responsive Hugo theme for blogs."
+homepage = "https://github.com/austingebauer/devise"
+tags = ["blog", "minimal", "personal", "simple", "clean"]
+features = ["responsive", "google analytics", "recent posts"]
+min_version = "0.61.0"
 
 [author]
   name = "Austin Gebauer"
-  homepage = "http://austingebauer.com/"
+  homepage = "https://github.com/austingebauer"
