--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -38,7 +38,7 @@ copyright = "&copy; Copyright Year, Your Name"
   mainSections = ["posts", "post", "blog"]   # Main sections to include in recent posts
   [[params.social]]
     fa_icon = "fab fa-github fa-1x"          # Font Awesome icon class
-    href = "http://github.com/youruser"      # Link to associate with icon
+    href = "http://github.com/youruser"      # Link to associate with icon (http://, https://, mailto:)
   [[params.social]]
     fa_icon = "fab fa-linkedin-in fa-1x"
     href = ""
@@ -47,4 +47,4 @@ copyright = "&copy; Copyright Year, Your Name"
     href = ""
   [[params.social]]
     fa_icon = "fas fa-at fa-1x"
-    href = "mailto:gebauer.austin@gmail.com" # Link can also be a mailto
+    href = ""
