--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -31,6 +31,7 @@ copyright = "&copy; Copyright Year, Your Name"
 
 # Configuration Features
 [params]
+  description = "Your meta description"      # Your meta description of the site
   header_title = "Your Name"                 # Your header title
   header_subtitle = "Your Creative Subtitle" # Your header subtitle
   home_image = "/images/avatar.png"          # Path to header image starting from the static directory
